# ThunderAuto

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ThunderAutoProject-Version.txt  ThunderLib-Version.txt
.github/workflows/: cmake-build-windows.yml
include/ThunderAuto/: App.hpp  CMakeLists.txt  ColorPalette.hpp  DocumentEditManager.hpp  DocumentManager.hpp  Error.hpp  FontLibrary.hpp  HistoryManager.hpp  ImGuiScopedField.hpp  Input.hpp  Logger.hpp  Shapes.hpp  Singleton.hpp  TrajectoryHelper.hpp  Types.hpp  UISizes.hpp  angle.h  angle.hpp  app.h  app.hpp  curve.h  curve.hpp  curve_math.h  curve_math.hpp  curve_point.h  curve_point.hpp  curve_settings.h  curve_settings.hpp  document_edit_manager.h  document_edit_manager.hpp  document_manager.h  document_manager.hpp  field.h  field.hpp  file_types.h  file_types.hpp  font_library.h  font_library.hpp  graphics.h  graphics.hpp  (+18 more)
include/ThunderAuto/Graphics/: Graphics.hpp  Texture.hpp
include/ThunderAuto/Pages/: ActionsPage.hpp  AutoModeManagerPage.hpp  EditorPage.hpp  Page.hpp  ProjectSettingsPage.hpp  PropertiesPage.hpp  RemoteUpdatePage.hpp  TrajectoryManagerPage.hpp
include/ThunderAuto/Platform/: Linux.hpp  MacOS.hpp  Platform.hpp  PlatformManager.hpp  Windows.hpp
include/ThunderAuto/Popups/: AddAutoModeStepPopup.hpp  CSVExportPopup.hpp  DuplicateAutoModePopup.hpp  DuplicateTrajectoryPopup.hpp  LinkTrajectoryEndBehaviorPopup.hpp  LinkTrajectoryPointPopup.hpp  NewActionPopup.hpp  NewAutoModePopup.hpp  NewFieldPopup.hpp  NewProjectPopup.hpp  NewTrajectoryPopup.hpp  OpenProjectErrorPopup.hpp  Popup.hpp  ProjectVersionPopup.hpp  RecursiveActionErrorPopup.hpp  RenameActionPopup.hpp  RenameAutoModePopup.hpp  RenameTrajectoryPopup.hpp  SaveProjectErrorPopup.hpp  UnsavedPopup.hpp  WelcomePopup.hpp
include/ThunderAuto/graphics/: graphics.hpp  texture.hpp
include/ThunderAuto/pages/: actions_page.h  actions_page.hpp  page.h  page.hpp  path_editor.h  path_editor_page.h  path_editor_page.hpp  path_manager.h  path_manager_page.h  path_manager_page.hpp  properties.h  properties_page.h  properties_page.hpp  settings.h  settings_page.h  settings_page.hpp
include/ThunderAuto/platform/: platform.h  platform.hpp  platform_linux.h  platform_linux.hpp  platform_macos.h  platform_macos.hpp  platform_manager.h  platform_manager.hpp  platform_windows.h  platform_windows.hpp
include/ThunderAuto/platform/linux/: linux.h
include/ThunderAuto/platform/macos/: macos.h
include/ThunderAuto/platform/windows/: windows.h
include/ThunderAuto/popups/: new_field.h  new_field_popup.h  new_field_popup.hpp  new_project.h  new_project_popup.h  new_project_popup.hpp  popup.h  popup.hpp  unsaved.h  unsaved_popup.h  unsaved_popup.hpp  welcome.h  welcome_popup.h  welcome_popup.hpp
include/ThunderAuto/util/: font_manager.h  util.h
lib/: app.cpp  main.cpp  project.cpp
lib/pages/: path_editor.cpp
lib/platform/linux/: linux.cpp
lib/platform/macos/: macos.mm
lib/popups/: CMakeLists.txt  new_project.cpp  welcome.cpp
lib/util/: CMakeLists.txt
res/: bg_2022.afdesign
res/images/: field-2023.afdesign  field-2024.afdesign  field-2025.afdesign  field-2026.afdesign
res/macos/: Info.plist.in  ThunderAuto.entitlements  app_icon.afphoto  app_icon.icns
scripts/cross_compiling/: build_windows_from_macos.sh  run_windows_from_macos.sh
src/: App.cpp  CMakeLists.txt  DocumentEditManager.cpp  DocumentManager.cpp  HistoryManager.cpp  Logger.cpp  Shapes.cpp  TrajectoryHelper.cpp  angle.cpp  app.cpp  app.h  curve.cpp  curve_math.cpp  curve_point.cpp  curve_settings.cpp  document_manager.cpp  field.cpp  field.h  file_types.cpp  font_manager.h  graphics.cpp  history_manager.cpp  macro_util.cpp  main.cpp  project.cpp  project.h  project_settings.cpp  project_state.cpp  texture.cpp  thunder_auto.h
src/Graphics/: CMakeLists.txt  DX11Graphics.cpp  DX11Graphics.hpp  DX11Texture.cpp  DX11Texture.hpp  Graphics.cpp  OpenGLGraphics.cpp  OpenGLGraphics.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  Texture.cpp
src/Pages/: ActionsPage.cpp  AutoModeManagerPage.cpp  CMakeLists.txt  EditorPage.cpp  ProjectSettingsPage.cpp  PropertiesPage.cpp  RemoteUpdatePage.cpp  TrajectoryManagerPage.cpp
src/Platform/: CMakeLists.txt  Linux.cpp  MacOS.mm  Platform.cpp  PlatformLinux.cpp  PlatformLinux.hpp  PlatformMacOS.hpp  PlatformMacOS.mm  PlatformManager.cpp  PlatformWindows.cpp  PlatformWindows.hpp  Windows.cpp
src/Popups/: AddAutoModeStepPopup.cpp  CMakeLists.txt  CSVExportPopup.cpp  DuplicateAutoModePopup.cpp  DuplicateTrajectoryPopup.cpp  LinkTrajectoryEndBehaviorPopup.cpp  LinkTrajectoryPointPopup.cpp  NewActionPopup.cpp  NewAutoModePopup.cpp  NewFieldPopup.cpp  NewProjectPopup.cpp  NewTrajectoryPopup.cpp  OpenProjectErrorPopup.cpp  ProjectVersionPopup.cpp  RecursiveActionErrorPopup.cpp  RenameActionPopup.cpp  RenameAutoModePopup.cpp  RenameTrajectoryPopup.cpp  SaveProjectErrorPopup.cpp  UnsavedPopup.cpp  WelcomePopup.cpp
src/graphics/: CMakeLists.txt  graphics.cpp  graphics_directx11.cpp  graphics_directx11.hpp  graphics_opengl.cpp  graphics_opengl.hpp  texture.cpp  texture_directx11.cpp  texture_directx11.hpp  texture_opengl.cpp  texture_opengl.hpp
src/pages/: CMakeLists.txt  actions_page.cpp  page.h  path_editor.cpp  path_editor.h  path_editor_page.cpp  path_manager.cpp  path_manager.h  path_manager_page.cpp  path_selector.cpp  path_selector.h  properties.cpp  properties.h  properties_page.cpp  settings.cpp  settings.h  settings_page.cpp
src/platform/: CMakeLists.txt  platform.cpp  platform.h  platform_linux.cpp  platform_macos.mm  platform_manager.cpp  platform_windows.cpp
src/platform/linux/: CMakeLists.txt  linux.cpp  linux.h
src/platform/macos/: CMakeLists.txt  macos.h  macos.mm
src/platform/windows/: CMakeLists.txt  windows.cpp  windows.h
src/popups/: CMakeLists.txt  new_field.cpp  new_field.h  new_field_popup.cpp  new_project.cpp  new_project.h  new_project_popup.cpp  popup.h  unsaved.cpp  unsaved.h  unsaved_popup.cpp  welcome.cpp  welcome.h  welcome_popup.cpp
src/util/: font_manager.cpp  util.cpp
